--- a/html/css/common_01.css
+++ b/html/css/common_01.css
@@ -445,7 +445,7 @@ body{min-width:1100px}
 strong{font-weight:700 !important;}
 button{cursor: pointer;}
 
-h2.title{color: #222;font-family: Pretendard;font-size: 32px;font-style: normal;line-height: 32px;font-weight: 700;letter-spacing: -0.64px;margin:32px 0;}
+h2.title{color: #222;font-family: Pretendard;font-size: 32px;font-style: normal;line-height: 32px;font-weight: 700;letter-spacing: -0.64px;padding:32px 0;}
 
 /* bg */
 .bg_top{background: url(../img/pc/bg/bg_top.png) no-repeat 0 0;background-size: cover;background-position: top;}
@@ -473,11 +473,12 @@ input::placeholder{color:#717B8A;}
 
 /* select */
 select{height: 50px;padding:0px 40px 0 16px;border-radius: 12px;border: 1px solid #E1E3E9;background: #FFF;background:#fff url(../img/pc/ico/ico_select_arrow.png) no-repeat right 16px center !important;}
+.select_box.full{width:100%;}
 
 /* table */
 table{width:100%;word-break: keep-all;}
 table thead{background: #F9F9FB;}
-table thead th{vertical-align:middle;padding:5px 0;color: #222;text-align: center;font-family: Pretendard;font-size: 16px;font-style: normal;font-weight: 400;line-height: 18px;letter-spacing: -0.32px;border-left:1px solid #D8DDE9;border-right:1px solid #D8DDE9;border-bottom:1px solid #D8DDE9;border-top:1px solid #222 !important;}
+table thead th{vertical-align:middle;padding:5px;color: #222;text-align: center;font-family: Pretendard;font-size: 16px;font-style: normal;font-weight: 400;line-height: 18px;letter-spacing: -0.32px;border-left:1px solid #D8DDE9;border-right:1px solid #D8DDE9;border-bottom:1px solid #D8DDE9;border-top:1px solid #222 !important;}
 table thead th:first-child{border-left:none;}
 table thead th:last-child{border-right:none;}
 table tbody{text-align:center;border-bottom:1px solid #D8DDE9;}
@@ -501,6 +502,20 @@ table .color_gray th{color:#717B8A;}
 
 .bar{position:relative;padding-right:16px;}
 .bar:after{width:1px;height:100%;background: #EFF0F3;content:'';position:absolute;top: 50%;right:8px;transform: translate(-50%, -50%)}
+
+/* hidden */
+.hidden {
+  position: absolute !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  width: 1px !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  clip-path: polygon(0 0, 0 0, 0 0) !important;
+}
+
+.disabled{cursor:initial;position:relative;opacity: 0.4;}
+.disabled:after{content:'';position:absolute;top:0;left:0;width:100%;height:100%;}
 
 /* 피씨 */
 @media (min-width: 570px) {
@@ -550,17 +565,20 @@ table .color_gray th{color:#717B8A;}
   
   /* location */
   .location{padding:32px 0 20px;position:relative;}
-  .location a{color: #717B8A;font-family: Pretendard;font-size: 15px;font-style: normal;font-weight: 400;letter-spacing: -0.3px;line-height:16px;display:inline-block;}
-  .location a:after{content:'>';padding:0 5px;}
-  .location a:first-child{padding-left:20px;background: url(../img/pc/ico/ico_location_logo.png) no-repeat 0 center;}
-  .location a:last-child{color: #222;font-weight: 500;}
-  .location a:last-child:after{display:none;}
+  .location a{color: #717B8A;font-family: Pretendard;font-size: 15px;font-style: normal;font-weight: 400;letter-spacing: -0.3px;line-height:20px;display:inline-block;vertical-align:middle;}
+  .location ul:after{content:'';display:block;clear:both;}
+  .location li{display:inline-block;float:left;}
+  .location li:after{content:'';padding:0 8px;background: url(../img/pc/ico/ico_location_arrow.png) no-repeat center;width:20px;height:20px;display:inline-block;vertical-align:middle;}
+  .location li:first-child{padding-left:20px;background: url(../img/pc/ico/ico_location_logo.png) no-repeat 0 center;}
+  .location li:last-child a{color: #222;font-weight: 500;}
+  .location li:last-child:after{display:none;}
 
   /* search_cont */
   .search_cont{background: #706DF0;padding:24px 40px;border-radius: 24px 24px 0px 0px;}
   .search_cont .search_box{display:flex;align-items: center;height:50px;}
-  .search_cont .search_box .input_cont{flex: 1;padding: 5px;}
-  input[type="text"]{border-radius: 12px;border: 1px solid #E1E3E9;line-height:50px;height:50px;}
+  .search_cont .search_box .input_cont{position:relative;flex: 1;padding: 5px;}
+  .search_cont .search_box .input_cont .btn_search{position:absolute;top:5px;right:5px;width:50px;height:50px;background:url(../img/pc/ico/ico_search.png) no-repeat center center;border:none;}
+  input[type="text"]{border-radius: 12px;border: 1px solid #E1E3E9;line-height:50px;height:50px;font-size:16px;}
 
   .search_cont_detail.on{height:100px;padding: 24px 155px 24px 40px;transition: height .1s;opacity: 1;}
   .search_cont_detail{opacity:0; background: #E7EAFA;padding: 24px 180px 24px 40px;position:relative;height:0;padding:0;transition: height .1s;}
@@ -568,7 +586,7 @@ table .color_gray th{color:#717B8A;}
   .search_cont_detail .cont input[type="text"]{margin:0 5px;}
   .search_cont_detail .btn_close{background:url(../img/pc/btn/btn_puple_close.png) no-repeat center;width:32px;height:32px;position:absolute;top:24px;right:40px;border:none;}
 
-  .ico_search{padding-right:50px;background:#fff url(../img/pc/ico/ico_search.png) no-repeat right 16px center !important;}
+  .ico_search{padding-right:50px;}
 
   .top_info_box{margin-bottom:16px;}
   .top_info_box:after{content:'';display:block;clear:both;}
@@ -587,7 +605,7 @@ table .color_gray th{color:#717B8A;}
   .select_box.on .select{border-radius: 12px 12px 0 0;}
   .select_box .select{display:inline-block;height: 50px;width:100%;line-height:50px;padding:0px 40px 0 16px;border-radius: 12px;border: 1px solid #E1E3E9;background:#fff url(../img/pc/ico/ico_select_arrow.png) no-repeat right 16px center !important;}
   .select_box.on .option{border-radius: 0 0 12px 12px;margin-top:-1px;}
-  .select_box .option{display:none;height:100px;overflow: hidden;position:absolute;top:50px;left:0;right:0;background:#fff;border-radius: 12px;border: 1px solid #E1E3E9;}
+  .select_box .option{display:none;height:100px;overflow: hidden;position:absolute;top:50px;left:0;right:0;z-index:1;background:#fff;border-radius: 12px;border: 1px solid #E1E3E9;}
   .select_box .option ul li{color: #222;font-family: Pretendard;font-size: 16px;font-style: normal;font-weight: 400;line-height: 16px;letter-spacing: -0.32px;margin:12px 0;padding:0 12px;}
   .select_box .option ul li:hover,
   .info_cont .ico_login:hover,
@@ -601,9 +619,6 @@ table .color_gray th{color:#717B8A;}
   .float_box:after{content:'';display:block;clear:both;}
   .float_box .left_cont{float:left;}
   .float_box .right_cont{float:right;}
-
-  /* .select_box:hover .select:hover{background-color:#F2F2F2 !important;} */
-  .select_box.disabled:after{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:#E6E6E6;opacity: 0.5;border-radius:12px;}
 
   /* footer */
   .footer .bar{padding-right:48px;}
@@ -625,6 +640,8 @@ table .color_gray th{color:#717B8A;}
 /* 모바일 */
 @media (max-width: 569px) {
   .inner{padding:0 20px;position:relative;}
+  
+  button{border:0;vertical-align: middle;}
   body{min-width:100%;}
   .pc{display:none !important;}
   .mo{display:block !important;}
@@ -632,19 +649,55 @@ table .color_gray th{color:#717B8A;}
   .bar{position:relative;padding-right:16px;}
   .bar:after{width:1px;height:80%;background: #EFF0F3;content:'';position:absolute;top: 50%;right:4px;transform: translate(-50%, -50%)}
 
+  /* header_cont */
+  .header_top_cont{height:64px;line-height:64px;}
+  .header_top_cont .logo{display:inline-block;}
+  .header_top_cont .logo a{background:url(../img/mo/logo.png) no-repeat left 0;background-size:30px auto;height:30px;line-height:30px;display:block;padding-left:35px;color: #222;font-size: 16px;font-style: normal;font-weight: 500;}
+  .header_top_cont .right_cont{position:absolute;top:0;right:20px;}
+  .header_top_cont .right_cont button{margin-left:16px;border:0;}
+  .header_top_cont .btn_search{background:url(../img/mo/btn_search.png) no-repeat center;background-size:24px auto;width:24px;height:24px;}
+  .header_top_cont .btn_login{background:url(../img/mo/btn_login.png) no-repeat center;background-size:24px auto;width:24px;height:24px;}
+  .header_top_cont .btn_menu{background:url(../img/mo/btn_menu.png) no-repeat center;background-size:24px auto;width:24px;height:24px;}
+
+  .header_cont .top_menu_cont{width: 100%;padding: 16px 0;position: relative;}
+  .header_cont .menu{white-space: nowrap;overflow-x: scroll;-ms-overflow-style: none;scrollbar-width: none;}
+  .header_cont .menu:after{content:'';display:block;clear:both;}
+  .header_cont .menu li{display:inline-block;}
+  .header_cont .menu li+li{margin-left:21px;}
+  .header_cont .menu li a.on {color: #706DF0;font-weight: 700;}
+
+  /* location */
+  .location{padding:32px 0 20px;position:relative;}
+  .location a{color: #717B8A;font-family: Pretendard;font-size: 15px;font-style: normal;font-weight: 400;letter-spacing: -0.3px;line-height:20px;display:inline-block;vertical-align:middle;}
+  .location ul:after{content:'';display:block;clear:both;}
+  .location li{display:inline-block;float:left;}
+  .location li:after{content:'';padding:0 8px;background: url(../img/mo/ico/ico_location_arrow.png) no-repeat center;width:20px;height:20px;display:inline-block;vertical-align:middle;}
+  .location li:first-child{padding-left:20px;background: url(../img/mo/ico/ico_location_logo.png) no-repeat 0 center;}
+  .location li:last-child{color: #222;font-weight: 500;}
+  .location li:last-child:after{display:none;}
+
+  .inner .ico_print{position:absolute;top:24px;right:20px;}
+  
+  /* search_cont */
+  .search_cont{background: #706DF0;padding:24px 20px;border-radius: 24px 24px 0px 0px;margin:0 -20px;}
+  .search_cont .search_box{display:flex;align-items: center;height:50px;}
+  .search_cont .search_box .input_cont{position:relative;flex: 1;padding: 5px;}
+  .search_cont .search_box .input_cont .btn_search{position:absolute;top:5px;right:5px;width:50px;height:50px;background:url(../img/pc/ico/ico_search.png) no-repeat center center;border:none;}
+  input[type="text"]{border-radius: 12px;border: 1px solid #E1E3E9;line-height:50px;height:50px;font-size:16px;}
+
   /* select_box */
   .select_box{position:relative;display:inline-block;cursor: pointer;}
   .select_box.on .select{border-radius: 12px 12px 0 0;}
-  .select_box .select{display:inline-block;height: 50px;width:100%;line-height:50px;padding:0px 40px 0 16px;border-radius: 12px;border: 1px solid #E1E3E9;background:#fff url(../img/pc/ico/ico_select_arrow.png) no-repeat right 16px center !important;}
+  .select_box .select{display:inline-block;height: 50px;width:100%;line-height:50px;padding:0px 40px 0 16px;border-radius: 8px;border: 1px solid #E1E3E9;background:#fff url(../img/pc/ico/ico_select_arrow.png) no-repeat right 16px center !important;}
   .select_box.on .option{border-radius: 0 0 12px 12px;margin-top:-1px;}
-  .select_box .option{display:none;height:100px;overflow: hidden;position:absolute;top:50px;left:0;right:0;background:#fff;border-radius: 12px;border: 1px solid #E1E3E9;}
+  .select_box .option{display:none;height:100px;overflow: hidden;position:absolute;top:50px;left:0;right:0;z-index:1;background:#fff;border-radius: 12px;border: 1px solid #E1E3E9;}
   .select_box .option ul li{color: #222;font-family: Pretendard;font-size: 16px;font-style: normal;font-weight: 400;line-height: 16px;letter-spacing: -0.32px;margin:12px 0;padding:0 12px;}
   .select_box .option ul li:hover,
   .info_cont .ico_login:hover,
   .info_cont .ico_join:hover{color: #706DF0;}
   .select_box.type02.on .select{border-radius: 0 0 12px 12px;}
-  .select_box.type02 .select{background:#fff url(../img/pc/ico/ico_select_arrow02.png) no-repeat right 16px center !important;height:36px;line-height:36px;}
-  .select_box.type02 .option{position:absolute;top:initial;bottom:36px;margin-bottom:-1px;border-radius:12px 12px 0 0;}
+  .select_box.type02 .select{background:#fff url(../img/pc/ico/ico_select_arrow02.png) no-repeat right 16px center !important;height:32px;line-height:32px;}
+  .select_box.type02 .option{position:absolute;top:initial;bottom:32px;margin-bottom:-1px;border-radius:12px 12px 0 0;}
 
   /* table */
   .table_cont{overflow-x:auto;}
@@ -663,7 +716,9 @@ table .color_gray th{color:#717B8A;}
   .footer .info_box address>span+span{margin-top:8px;}
   .footer .info_box address>span.bar{padding:0;}
   .footer .info_box address>span.bar:after{display:none;}
-  .footer .copy{color: #717B8A;font-family: Pretendard;font-size: 13px;font-style: normal;font-weight: 400;line-height: 13px;letter-spacing: -0.52px;}
+  .footer .select_cont{}
+  .footer .select_cont .select_box+.select_box{margin-top:8px;}
+  .footer .copy{color: #717B8A;font-family: Pretendard;font-size: 13px;font-style: normal;font-weight: 400;line-height: 13px;letter-spacing: -0.52px;margin-top:24px;}
   .footer .top_info .point{color: #706DF0;}
 
   /* paging */
@@ -698,7 +753,39 @@ table .color_gray th{color:#717B8A;}
   .btn.ico_upload span{background:url(../img/pc/ico/ico_upload.png) no-repeat 0 center;}
   .btn.ico_download span{background:url(../img/pc/ico/ico_download.png) no-repeat 0 center;}
 
-  
+  /* searchlayer */
+  body.leftmode {height:100vh;overflow:hidden;}
+  .searchlayer {overflow-x:hidden;overflow-y:auto;position:fixed;left:-100%;top:0;width:100%;height:100vh;background:#fff;z-index:101;-webkit-transition:left 0.2s;-moz-transition:left 0.2s;transition:left 0.2s;-webkit-overflow-scrolling:touch;}
+  .searchlayer .search_cont{background:none;padding:8px 20px;border-radius:0;margin:0;border-bottom:1px solid #EFF0F3;}
+  .searchlayer .btn_layer_close{width:24px;height:24px;background:url(../img/mo/ico/btn_layer_close.png) no-repeat center;background-size:24px auto;margin-left: 10px;}
+  .searchlayer .content_wrap{padding:40px 20px;}
+  .searchlayer .content_wrap .select_box+.select_box{margin-top:8px;}
+
+  /* .select_box.on:before{
+    position:fixed;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    width:100%;
+    height:100%;
+    background:#000;
+    opacity: 0.4;
+    content:'';
+    z-index: 1;
+  }
+  .select_box .option{
+    border:1px solid red;
+    position:fixed !important;
+    left:0;
+    right:0;
+    top:initial;
+    bottom:0 !important;
+    width:100%;
+    min-height:10%;
+    z-index: 1;
+  } */
+
 }
 
 
